--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ letter-spacing: -0.28px;
 
 .buy-text {
     color: #FFF;
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 28px;
 font-style: normal;
 font-weight: 500;
@@ -114,7 +114,7 @@ border-radius: 100px;
 background: #FD9222;
 border: none;
 color: #FFF;
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 14px;
 font-style: normal;
 font-weight: 600;
@@ -132,7 +132,7 @@ border-radius: 100px;
 border: 1px solid #FFF;
 background-color: transparent;
 color: #FFF;
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 14px;
 font-style: normal;
 font-weight: 600;
@@ -141,7 +141,7 @@ line-height: normal;
 
 .buy-text-scroll {
     color: #FFF;
-    font-family: Montserrat;
+    font-family: 'Montserrat';
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -162,7 +162,7 @@ line-height: normal;
 
 .info-name {
     color: #FFF;
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 18px;
 font-style: normal;
 font-weight: 600;
@@ -173,7 +173,7 @@ margin-top: 22px;
 
 .info-text {
     color: rgba(255, 255, 255, 0.70);
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 14px;
 font-style: normal;
 font-weight: 400;
@@ -197,7 +197,7 @@ width: 308px;
 .information-title {
     color: #111;
     text-align: center;
-    font-family: Montserrat;
+    font-family: 'Montserrat';
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
@@ -208,7 +208,7 @@ width: 308px;
 
 .information-title-color {
     color: #FD9222;
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 24px;
 font-style: normal;
 font-weight: 600;
@@ -220,7 +220,7 @@ text-transform: uppercase;
 .information-text {
     color: #111;
 text-align: center;
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 14px;
 font-style: normal;
 font-weight: 400;
@@ -260,7 +260,7 @@ border-radius: 15px;
 }
 
 .information-name {
-font-family: Montserrat;
+font-family: 'Montserrat';
 font-size: 14px;
 font-style: normal;
 font-weight: 600;
@@ -275,4 +275,91 @@ text-transform: uppercase;
 
 .color-black {
     color: #111;
+}
+
+.how-made-box {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+
+.how-made-title {
+    color: #111;
+text-align: center;
+font-family: 'Montserrat';
+font-size: 24px;
+font-style: normal;
+font-weight: 800;
+line-height: 28px; /* 116.667% */
+letter-spacing: -0.72px;
+text-transform: uppercase;
+}
+
+.how-made-title-color {
+    color: #FD9222;
+font-family: 'Montserrat';
+font-size: 24px;
+font-style: normal;
+font-weight: 800;
+line-height: 28px;
+letter-spacing: -0.72px;
+text-transform: uppercase;
+}
+
+.how-made-perevie {
+    width: 600px;
+height: 400px;
+flex-shrink: 0;
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%), url(<path-to-image>), lightgray -10.819px -343.839px / 103.473% 236.295% no-repeat;
+}
+
+.how-made-headline {
+    color: #111;
+font-family: 'Montserrat';
+font-size: 18px;
+font-style: normal;
+font-weight: 1000;
+line-height: 24px; /* 133.333% */
+width: 350px;
+}
+
+.how-made-box-text-img {
+    display: flex;
+}
+
+.how-made-box-text {
+    margin-left: 52px;
+}
+
+.how-made-play-button {
+    position: absolute;
+padding-left: 278px;
+padding-top: 178px;
+}
+
+.how-made-item {
+    list-style: url(./img/disc.png);
+}
+
+.how-made-text {
+    color: #111;
+font-family: 'Montserrat';
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px; /* 128.571% */
+letter-spacing: -0.28px;
+}
+
+.how-made-text-wight-n-1 {
+    width: 436px;
+}
+
+.how-made-text-wight-n-2 {
+    width: 409px;
+}
+
+.how-made-text-wight-n-3 {
+    width: 404px;
 }
